# lol.blocks

./: README.md  direct12_init.cpp  direct12_init.hpp  logging_sys.hpp  lol.DX12.cpp  lol.PCH.hpp  lol.STL.cpp  lol.blocks.sln  lol.blocks.vcxproj  lol.blocks.vcxproj.filters  lol.blocks_error_codes.hpp  lol.exceptions.hpp  lol.utility.cpp  main.cpp  memory_heap_sys.hpp  window_class.hpp
cmake/: CMakeLists.txt  CMakeSettings.json
cpp_headers/: ALL_DX12_INCLUDES.hpp  ALL_LIBRARY_LINKING.hpp  ALL_UTILITY_INCLUDES.hpp  ALL_WINDOWS_INCLUDES.hpp  lol.exceptions.hpp  lol.utility.hpp  window_class.hpp
cpp_headers/STL/private/: STL_source.hpp
cpp_headers/STL/public/: public_STL.hpp
cpp_headers/classes/: lol.blocks.class.include.hpp
cpp_headers/classes/dx12/: direct12_init.hpp
cpp_headers/classes/include/private/: lol.blocks.classes.include.hpp
cpp_headers/classes/include/public/: public_classes.hpp
cpp_headers/classes/win32_api/: resource.h  window_class.hpp
cpp_headers/debugging/: LOL_BLOCKS_SYSTEM_DEBUG_MACROS.hpp
cpp_headers/debugging/templates/: lol.TEMPLATES_TEST.hpp
cpp_headers/macros/debugging/: LOL_BLOCKS_SYSTEM_DEBUG_MACROS.hpp
cpp_headers/macros/header_guards/: macro.guard.hpp
cpp_headers/macros/include/: lol.blocks.macro_guard.include.hpp
cpp_headers/macros/win32macros/: resource.h
cpp_headers/pch/: lol.PCH.hpp  lol.blocks.main.PCH.hpp
cpp_headers/pch/dependencies/public/: public_all_dx_headers.hpp
cpp_headers/pch/include/: main_pch.hpp
cpp_headers/pch/include/private/: lol.blocks.main.pch.hpp
cpp_headers/pch/include/public/: public_pch.hpp
cpp_headers/pch/project_includes/private/: lol.blocks.project.includes.hpp
cpp_headers/pch/project_includes/public/: public_project.includes.hpp
cpp_headers/pch/system_includes/: ALL_UTILITY_INCLUDES.hpp
cpp_headers/system_includes/: ALL_DX12_INCLUDES.hpp  ALL_STL_INCLUDES.hpp  ALL_UTILITY_INCLUDES.hpp  ALL_WINDOWS_INCLUDES.hpp
cpp_headers/testing/: test_api.hpp
cpp_headers/testing/pch/: testing.lol.PCH.hpp
cpp_headers/utilities/: logging_sys.hpp  lol.blocks.utils.include.hpp  lol.blocks_error_codes.hpp  lol.exceptions.hpp  lol.singleton_manager.hpp  memory_heap_sys.hpp
cpp_headers/utilities/classes/: logging_sys.hpp  lol.singleton_manager.hpp
cpp_headers/utilities/classes/include/: lol.blocks.classes_utils.include.hpp
cpp_headers/utilities/dependencies/public/: public_all_win32_headers.hpp
cpp_headers/utilities/include/private/: lol.class.utilities.include.hpp
cpp_headers/utilities/include/public/: public_all_utilities_header.hpp
cpp_headers/win32_api/: window_class.hpp
cpp_source/: lol.PCH.cpp  main.cpp
cpp_source/definitions/: direct12_init.cpp  lol.SINGLETON_MANAGER.cpp  lol.TEST_API.cpp  window_class.cpp
cpp_source/definitions/api/: lol.TEST_API.cpp
cpp_source/definitions/classes/: direct12_init.cpp  window_class.cpp
cpp_source/entry/: main.cpp
cpp_source/translation_units/: lol.DX12.cpp  lol.LIBRARY.cpp  lol.PCH.cpp  lol.SINGLETON_MANAGER.cpp  lol.STL.cpp  lol.TEST_API.cpp  lol.UTILS.cpp  lol.WINDOWS.cpp  lol.blocks.classes.include.cpp  lol.blocks.utils_classes.include.cpp  pch.cpp  testing.cpp  utilities.cpp
cpp_source/translation_units/testing/pch/: lol.testing.pch.cpp
docs/: notes.txt  plan.md  template_header.txt  work.md
gui_projects_dll/win32_gui/base/header/: errors.hpp  ground.hpp  log_window.hpp  logging.hpp  pop_up.hpp
gui_projects_dll/win32_gui/base/source/: errors.cpp  ground.cpp  log_window.cpp  logging.cpp  pop_up.cpp
gui_projects_dll/win32_gui/dependencies/class/: errors.hpp
gui_projects_dll/win32_gui/dependencies/include/: win32gui_dependencies_include.hpp
gui_projects_dll/win32_gui/dependencies/macros/: win32gui_macro_import.hpp
gui_projects_dll/win32_gui/dependencies/windows_api/: win32_header_includes.hpp
gui_projects_dll/win32_gui/include/: win32gui.include.hpp  win32gui_all.cpp
gui_projects_dll/win32gui.include/: win32gui.lib.include.hpp  win32gui_all.cpp
ide_config.json_stuff/vs_code/: c_cpp_properties.json  launch.vs.json  tasks.vs.json
ide_config/vs2022/: CppProperties.json
ide_config/vs_code/: tasks.vs.json
install/: build.ps1  get.ps1
lib/dx12_gui/include/: dx12gui_all.cpp
lib/win32_gui/classes/: win32gui_button.hpp
lib/win32_gui/include/: win32gui.include.hpp
lib/win32_gui/macros/: win32gui_macro_import.hpp
main_program_lol.blocks.exe/cpp_headers/testing/: test_api.hpp
main_program_lol.blocks.exe/cpp_source/entry/: main.cpp
main_program_lol.blocks.exe/cpp_source/translation_units/: classes.cpp
main_program_lol.blocks.exe/dependencies/dx12api/: directx_includes.cpp
main_program_lol.blocks.exe/dependencies/macros/: debug_settings.hpp
main_program_lol.blocks.exe/sources/entry/: main.cpp
main_program_lol.blocks.exe/testing/: test_api.hpp
projects/lol.blocks/api/: lol_api.cpp  lol_api.hpp
projects/lol.blocks/demo/: lol_dx11_d.cpp  lol_dx11_d.hpp  lol_window_d.cpp  lol_window_d.hpp
projects/lol.blocks/entry/: main.cpp
projects/main_program_lol.blocks.exe/dx/: draw.cpp  draw.hpp  dx_device_init.cpp  dx_device_init.hpp
projects/main_program_lol.blocks.exe/entry/: main.cpp
projects/main_program_lol.blocks.exe/errors/: lol.codes.cpp  lol.codes.hpp
projects/main_program_lol.blocks.exe/global/: globals.cpp  globals.hpp
projects/main_program_lol.blocks.exe/includes/: go.hpp
projects/main_program_lol.blocks.exe/macros/: debug_settings.hpp  test_settings.hpp  type_settings.hpp
projects/main_program_lol.blocks.exe/physics/: physics_sys.hpp
projects/main_program_lol.blocks.exe/shaders/: pixel_shader.hlsl  vertex_shader.hlsl
projects/main_program_lol.blocks.exe/testing/: test_api.cpp  test_api.hpp
projects/win32_gui/base/: errors.cpp  errors.hpp  ground.cpp  ground.hpp  log_window.cpp  log_window.hpp  logging.cpp  logging.hpp  pop_up.cpp  pop_up.hpp
projects/win32_gui/dependencies/: win32_header_includes.hpp  win32gui_macro_import.hpp
projects/win32gui.include/: win32gui.include.hpp
projects/win_types/: stl_macro_definitions.hpp  types.hpp
resources/: lol.blocks.rc
(+231 files in other folders)
